--- a/index.html
+++ b/index.html
@@ -475,9 +475,9 @@
                 <div class="footer-col">
                     <h4>La société Navilone</h4>
                     <ul class="menu">
-                        <li><a href="#home" class="menu-btn" id="homee"><i class="fas fa-home"></i></a></li>
-                        <li><a href="#apropos" class="menu-btn" id="about"></a></li>
-                        <li><a href="#articles" class="menu-btn" id="news"></a></li>
+                        <li><a href="#home" class="menu-btn" id="homeee"><i class="fas fa-home"></i></a></li>
+                        <li><a href="#apropos" class="menu-btn" id="aboute"></a></li>
+                        <li><a href="#articles" class="menu-btn" id="newss"></a></li>
                         <li><a href="#services" class="menu-btn">Services</a></li>
                         <li><a href="#contact" class="menu-btn">Contact</a></li>
                    </ul>
