--- a/index.html
+++ b/index.html
@@ -312,15 +312,15 @@
 
 
     <section class="wrapper">
-      <h2 class="title">Nos services</h2>
+      <h2 class="title" id="servtitle">Nos services</h2>
       <div class="slide">
           <input type="radio" name="slide" id="c1" checked>
           <label for="c1" class="slider">
               <div class="line">
                   <div class="icon">1</div>
                   <div class="description">
-                      <h4>Analyse du besoin</h4>
-                      <p>Comprendre votre domaine d'activité, entrevoir les possibilités pour son développement.</p>
+                      <h4 id="servtitle1"></h4>
+                      <p id="servp1">Comprendre votre domaine d'activité, entrevoir les possibilités pour son développement.</p>
                   </div>
               </div>
           </label>
@@ -329,8 +329,8 @@
               <div class="line">
                   <div class="icon">2</div>
                   <div class="description">
-                      <h4>Outils nécessaires selon les besoins</h4>
-                      <p>Après une analyse pertinente nous serons à même de vous proposer les meilleures solutions.</p>
+                      <h4 id="servtitle2">Outils nécessaires selon les besoins</h4>
+                      <p id="servp2"></p>
                   </div>
               </div>
           </label>
@@ -339,8 +339,8 @@
               <div class="line">
                   <div class="icon">3</div>
                   <div class="description">
-                      <h4>Mise en place</h4>
-                      <p>L'installation d'outils modernes pour vous faciliter la gestion de tout mouvement dans votre entreprise.</p>
+                      <h4 id="servtitle3">Mise en place</h4>
+                      <p id="servp3">L'installation d'outils modernes pour vous faciliter la gestion de tout mouvement dans votre entreprise.</p>
                   </div>
               </div>
           </label>
@@ -349,8 +349,8 @@
               <div class="line">
                   <div class="icon">4</div>
                   <div class="description"  id="contact">
-                      <h4>Formation des utilisateurs</h4>
-                      <p>Toutes les personnes qui seront amenées à utiliser ces outils seront formées.</p>
+                      <h4 id="servtitle4">Formation des utilisateurs</h4>
+                      <p id="servp4">Toutes les personnes qui seront amenées à utiliser ces outils seront formées.</p>
                   </div>
               </div>
           </label>
