--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
 
 
-    <!----------------------------------           about section start             ------------------------------------->
+    <!----------------------------------           Services section start             ------------------------------------->
 
 
 
@@ -369,10 +369,10 @@
         <span class="big-circle"></span>
         <div class="form">
           <div class="contact-info">
-            <h3 class="title-contact">Nous sommes à votre disposition</h3>
-            <p class="text">
-              Laissez-nous vos coordonnées et nous vous contacterons au plus vite </br>
-              <span>* Les informations recueillies à partir de ce formulaire font l'objet d'un traitement informatisé destiné à répondre à votre demande.</span>
+            <h3 class="title-contact" id="contitle">Nous sommes à votre disposition</h3>
+            <p class="text" id="conp1">
+              </br>
+              <span id="conp2">* Les informations recueillies à partir de ce formulaire font l'objet d'un traitement informatisé destiné à répondre à votre demande.</span>
             </p>
   
             <div class="info">
@@ -388,7 +388,7 @@
             </div>
   
             <div class="social-media">
-              <p>Contactez-nous ici aussi : </p>
+              <p id="conp3">Contactez-nous ici aussi : </p>
               <div class="social-icons">
                 <a href="https://www.linkedin.com/in/prasath-thamboo/">
                   <i class="fab fa-linkedin-in"></i>
@@ -405,7 +405,7 @@
               <h3 class="title-contact">Contact</h3>
               <div class="input-container">
                 <input type="text" name="name" class="input" />
-                <label for="">Nom</label>
+                <label for="" id="conp4">Nom</label>
                 <span>Username</span>
               </div>
               <div class="input-container">
@@ -423,7 +423,7 @@
                 <label for="">Message</label>
                 <span>Message</span>
               </div>
-              <button type="submit" class="btn"> Envoyer </button>
+              <button type="submit" class="btn" id="conp5"></button>
             </form>
           </div>
         </div>
