--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navilone</title>
+    <title>Navilone - Expert en gestion de projet</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 
 
 
-    <!----------------------------------           cookie section             ------------------------------------->
+    <!----------------------------------           cookie section and contact button             ------------------------------------->
 
     
     <div class="contact-button">
@@ -32,6 +32,11 @@
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
+
+
+    <!----------------------------------           Navbar section             ------------------------------------->
+
+
 
     <nav class="navbar">
         <div class="max-width">
@@ -369,10 +374,9 @@
         <span class="big-circle"></span>
         <div class="form">
           <div class="contact-info">
-            <h3 class="title-contact" id="contitle">Nous sommes à votre disposition</h3>
+            <h3 class="title-contact" id="contitle"></h3>
             <p class="text" id="conp1">
-              </br>
-              <span id="conp2">* Les informations recueillies à partir de ce formulaire font l'objet d'un traitement informatisé destiné à répondre à votre demande.</span>
+            <p id="conp2" class="text2"></p>
             </p>
   
             <div class="info">
@@ -388,7 +392,7 @@
             </div>
   
             <div class="social-media">
-              <p id="conp3">Contactez-nous ici aussi : </p>
+              <p id="conp3"></p>
               <div class="social-icons">
                 <a href="https://www.linkedin.com/in/prasath-thamboo/">
                   <i class="fab fa-linkedin-in"></i>
@@ -405,7 +409,7 @@
               <h3 class="title-contact">Contact</h3>
               <div class="input-container">
                 <input type="text" name="name" class="input" />
-                <label for="" id="conp4">Nom</label>
+                <label for="" id="conp4"></label>
                 <span>Username</span>
               </div>
               <div class="input-container">
@@ -467,13 +471,13 @@
             <div class="row">
                 <div class="footer-col">
                     <div class="img"><img src="images/Navilone_logo.png" alt="logo"><img src="images/Navilone_logo_écriture.png" alt="logo"></div>
-                    <p> Transformez vos idées en succès grâce à une gestion de projet experte, sur-mesure et orientée résultats.</p> </br> </br> 
+                    <p id="foo1"></p> </br> </br> 
                     <div class="social-links">
                         <a href="https://fr.linkedin.com/company/navilone"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="footer-col">
-                    <h4>La société Navilone</h4>
+                    <h4 id="footitle1"></h4>
                     <ul class="menu">
                         <li><a href="#home" class="menu-btn" id="homeee"><i class="fas fa-home"></i></a></li>
                         <li><a href="#apropos" class="menu-btn" id="aboute"></a></li>
@@ -483,16 +487,15 @@
                    </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Informations importantes</h4>
+                    <h4 id="footitle2"></h4>
                     <ul>
-                        <li><a href="/mention.html">Mentions légales</a></li>
-                        <li><a href="politique.html">Polique de confidentialité</a></li>
+                        <li><a href="mention.html" id="foo2"></a></li>
+                        <li><a href="politique.html" id="foo3"></a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Tout droits réservés </br> NAVILONE</h4>
-
-
+                    <h4 id="footitle3"></h4>
+                    <p>NAVILONE</p>
                 </div>
             </div>
         </div>
