--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Navilone - Expert en gestion de projet, offrant des services professionnels de qualité. Contactez-nous dès maintenant.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navilone - Expert en gestion de projet</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
