--- a/mention.html
+++ b/mention.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Navilone - Mentions Légales">
     <title>Navilone - Mentions légales</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -160,8 +161,7 @@
 
     <script src="script.js"></script>
     <script src="trad.js"></script>
+    <script src="tradmentions.js"></script>
 
-   
-    
 </body>
 </html>
