--- a/mention.html
+++ b/mention.html
@@ -41,11 +41,11 @@
           <div class="max-width">
               <div class="logo"><a href="index.html"><img src="images/Navilone_logo_écriture.png" alt="logo" ><img src="images/Navilone_logo.png" alt="logo"></a></div>
               <ul class="menu">
-                  <li><a href="#home" class="menu-btn" id="homee"><i class="fas fa-home"></i></a></li>
-                  <li><a href="#apropos" class="menu-btn" id="about"></a></li>
-                  <li><a href="#articles" class="menu-btn" id="news"></a></li>
-                  <li><a href="#services" class="menu-btn">Services</a></li>
-                  <li><a href="#contact" class="menu-btn">Contact</a></li>
+                  <li><a href="https://navilone.com/#home" class="menu-btn" id="homee"><i class="fas fa-home"></i></a></li>
+                  <li><a href="https://navilone.com/#apropos" class="menu-btn" id="about"></a></li>
+                  <li><a href="https://navilone.com/#articles" class="menu-btn" id="news"></a></li>
+                  <li><a href="https://navilone.com/#services" class="menu-btn">Services</a></li>
+                  <li><a href="https://navilone.com/#contact" class="menu-btn">Contact</a></li>
               </ul>
               <div class="menu-btn">
                   <i class="fas fa-bars"></i>
@@ -136,11 +136,11 @@
                 <div class="footer-col">
                     <h4 id="footitle1"></h4>
                     <ul class="menu">
-                        <li><a href="#home" class="menu-btn" id="homeee"><i class="fas fa-home"></i></a></li>
-                        <li><a href="#apropos" class="menu-btn" id="aboute"></a></li>
-                        <li><a href="#articles" class="menu-btn" id="newss"></a></li>
-                        <li><a href="#services" class="menu-btn">Services</a></li>
-                        <li><a href="#contact" class="menu-btn">Contact</a></li>
+                        <li><a href="https://navilone.com/#home" class="menu-btn" id="homeee"><i class="fas fa-home"></i></a></li>
+                        <li><a href="https://navilone.com/#apropos" class="menu-btn" id="aboute"></a></li>
+                        <li><a href="https://navilone.com/#articles" class="menu-btn" id="newss"></a></li>
+                        <li><a href="https://navilone.com/#services" class="menu-btn">Services</a></li>
+                        <li><a href="https://navilone.com/#contact" class="menu-btn">Contact</a></li>
                    </ul>
                 </div>
                 <div class="footer-col">
@@ -160,7 +160,6 @@
 
 
     <script src="script.js"></script>
-    <script src="trad.js"></script>
     <script src="tradmentions.js"></script>
 
 </body>
