--- a/politique.html
+++ b/politique.html
@@ -65,41 +65,41 @@
     <section class="politique">
         <div class="max-width">
 
-            Politique de confidentialité
+            <h1 id="poltitle1">Politique de confidentialité</h1>
 
-            <h1> 1. Introduction </h1>
+            <h1 id="poltitle2"> 1. Introduction </h1>
 
-            La présente politique de confidentialité décrit les pratiques de collecte, d’utilisation et de protection des données personnelles des utilisateurs 
-            du site "https://navilone.com/" . En utilisant le site et en remplissant le formulaire de contact, vous acceptez les termes de cette politique de confidentialité.
+            <p id="polp1">La présente politique de confidentialité décrit les pratiques de collecte, d’utilisation et de protection des données personnelles des utilisateurs 
+            du site "https://navilone.com/" . En utilisant le site et en remplissant le formulaire de contact, vous acceptez les termes de cette politique de confidentialité.</p>
 
-            <h1> 2. Données collectées </h1>
+            <h1 id="poltitle3"> 2. Données collectées </h1>
 
-            Lorsque vous utilisez notre formulaire de contact, nous collectons les données personnelles suivantes :
+            <p id="polp2">Lorsque vous utilisez notre formulaire de contact, nous collectons les données personnelles suivantes :
 
                 Nom et prénom
                 Adresse email
                 Message (contenu de votre demande)
 
-            Ces informations sont utilisées uniquement pour traiter votre demande et vous contacter en retour.
+            Ces informations sont utilisées uniquement pour traiter votre demande et vous contacter en retour.</p>
 
-            <h1> 3. Finalité de la collecte des données </h1>
+            <h1 id="poltitle4"> 3. Finalité de la collecte des données </h1>
 
-            Les données personnelles recueillies via le formulaire de contact sont utilisées dans les buts suivants :
+            <p id="polp3">Les données personnelles recueillies via le formulaire de contact sont utilisées dans les buts suivants :
 
                 Répondre à vos demandes de renseignements et questions concernant nos services de gestion de projets.
-                Améliorer notre service client en suivant les échanges et en optimisant les réponses.
+                Améliorer notre service client en suivant les échanges et en optimisant les réponses.</p>
 
-                <h1> 4. Destinataires des données </h1>
+            <h1 id="poltitle5"> 4. Destinataires des données </h1>
 
-            Les données collectées sont destinées uniquement à l'équipe de gestion de projets de Navilone. Elles ne sont ni vendues, ni échangées, ni transférées à des tiers, sauf obligation légale.
+            <p id="polp4">Les données collectées sont destinées uniquement à l'équipe de gestion de projets de Navilone. Elles ne sont ni vendues, ni échangées, ni transférées à des tiers, sauf obligation légale.</p>
 
-            <h1> 5. Durée de conservation des données </h1>
+            <h1 id="poltitle6"> 5. Durée de conservation des données </h1>
 
-            Les données collectées via le formulaire de contact sont conservées pendant une durée de 12 mois à partir de la réception de votre message, sauf si vous en demandez la suppression ou si la loi impose une durée de conservation différente.
+            <p id="polp5">Les données collectées via le formulaire de contact sont conservées pendant une durée de 12 mois à partir de la réception de votre message, sauf si vous en demandez la suppression ou si la loi impose une durée de conservation différente.</p>
 
-            <h1> 6. Vos droits concernant vos données </h1>
+            <h1 id="poltitle7"> 6. Vos droits concernant vos données </h1>
 
-            Conformément au RGPD, vous disposez des droits suivants :
+            <p id="polp6">Conformément au RGPD, vous disposez des droits suivants :
 
                 Droit d'accès : Vous pouvez demander à savoir quelles données nous détenons sur vous.
                 Droit de rectification : Vous pouvez demander la correction de vos données si elles sont inexactes ou incomplètes.
@@ -107,25 +107,25 @@
                 Droit à la limitation du traitement : Vous pouvez demander que l'utilisation de vos données soit restreinte.
                 Droit d'opposition : Vous pouvez vous opposer au traitement de vos données pour des motifs légitimes.
 
-            Pour exercer ces droits, vous pouvez nous contacter à l'adresse suivante : contact@navilone.com.
+            Pour exercer ces droits, vous pouvez nous contacter à l'adresse suivante : contact@navilone.com.</p>
 
-            <h1> 7. Sécurité des données </h1>
+            <h1 id="poltitle8"> 7. Sécurité des données </h1>
 
-            Nous mettons en œuvre des mesures de sécurité appropriées pour protéger vos données contre tout accès non autorisé, utilisation abusive ou divulgation. Le site utilise le protocole HTTPS pour sécuriser les échanges.
+            <p id="polp7">Nous mettons en œuvre des mesures de sécurité appropriées pour protéger vos données contre tout accès non autorisé, utilisation abusive ou divulgation. Le site utilise le protocole HTTPS pour sécuriser les échanges.</p>
 
-            <h1> 8. Cookies </h1>
+            <h1 id="poltitle9"> 8. Cookies </h1>
 
-            Notre site utilise des cookies pour améliorer l'expérience utilisateur. Aucun cookie de traçage ou publicitaire n'est utilisé. Les cookies strictement nécessaires au fonctionnement du site ne nécessitent pas de consentement.
+            <p id="polp8">Notre site utilise des cookies pour améliorer l'expérience utilisateur. Aucun cookie de traçage ou publicitaire n'est utilisé. Les cookies strictement nécessaires au fonctionnement du site ne nécessitent pas de consentement.</p>
 
-            <h1> 9. Modifications de la politique de confidentialité </h1>
+            <h1 id="poltitle10"> 9. Modifications de la politique de confidentialité </h1>
 
-            Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Les modifications seront publiées sur cette page avec la date de mise à jour.
+            <p id="polp9">Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Les modifications seront publiées sur cette page avec la date de mise à jour.
 
-            Dernière mise à jour : 05/11/2024
+            Dernière mise à jour : 05/11/2025</p>
 
-            <h1> 10. Contact </h1>
+            <h1 id="poltitle11"> 10. Contact </h1>
 
-            Pour toute question concernant notre politique de confidentialité, vous pouvez nous écrire à : contact@navilone.com.
+            <p id="polp10">Pour toute question concernant notre politique de confidentialité, vous pouvez nous écrire à : contact@navilone.com.</p>
 
         </div>
 
@@ -174,7 +174,6 @@
    </footer>
 
 
-    <script src="script.js"></script>
     <script src="tradpol.js"></script>
    
     
