--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="max-width">
             <div class="logo"><a href="index.html"><img src="images/Navilone_logo_écriture.png" alt="logo" ><img src="images/Navilone_logo.png" alt="logo"></a></div>
             <ul class="menu">
-                <li><a href="#home" class="menu-btn" id="homee"><i class="fas fa-home"></i></a></li>
+                <li><a href="#home" class="menu-btn" id="homee"></a></li>
                 <li><a href="#apropos" class="menu-btn" id="about"></a></li>
                 <li><a href="#articles" class="menu-btn" id="news"></a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
@@ -85,6 +85,7 @@
     <section class="services" id="apropos"> 
         <div class="max-width">
             <h2 class="title" id="valtitle"></h2>
+            <h3 id="valtitle2"></h1>
               <div class="serv-content">
                 <div class="card">
                     <div class="box">
