--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <div class="max-width">
             <div class="logo"><a href="index.html"><img src="images/Navilone_logo_écriture.png" alt="logo" ><img src="images/Navilone_logo.png" alt="logo"></a></div>
             <ul class="menu">
-                <li><a href="#home" class="menu-btn" id="homee"></a></li>
-                <li><a href="#apropos" class="menu-btn" id="about"></a></li>
-                <li><a href="#articles" class="menu-btn" id="news"></a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
-                <li><a href="#contact" class="menu-btn">Contact</a></li>
+                <li><a href="https://navilone.com/index.html#home" class="menu-btn" id="homee"></a></li>
+                <li><a href="https://navilone.com/index.html#apropos" class="menu-btn" id="about"></a></li>
+                <li><a href="https://navilone.com/index.html#articles" class="menu-btn" id="news"></a></li>
+                <li><a href="https://navilone.com/index.html#services" class="menu-btn">Services</a></li>
+                <li><a href="https://navilone.com/index.html#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
